# arho-ryhti

./: .env.dev  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-ruff-config.toml  Makefile  README.md  alembic.ini  docker-compose.ci-test.yml  docker-compose.clear-mounts.yml  docker-compose.dev.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: code-style.yml  deploy.yml  test-terraform.yml  tests.yml
database/: base.py  codes.py  db_helper.py  functions.py  models.py  triggers.py  validation.py  views.py
database/test/: conftest.py  test_ryhti_client.py
infra/: .gitignore  Makefile  README.md  api.tf  arho-test.tfvars.enc.json  arho.tfvars.sample.json  bastion.tf  bastion_user_data.tpl  cloudwatch.tf  domain.tf  get-mfa-vars.sh  hame-dev.tfvars.enc.json  iam.tf  lambda.tf  main.tf  tykki-test.tfvars.enc.json  variables.tf  vpc.tf
infra/ansible/: playbook.yml  vars.yaml
infra/public_keys/: arho-test.enc  hame-test.enc  tykki-test.enc
infra/x-road/: README.md  cloudwatch.tf  domain.tf  ecs.tf  efs.tf  outputs.tf  rds.tf  secrets.tf  variables.tf  vpc.tf
lambdas/db_manager/: db_manager.Dockerfile  db_manager.py  requirements.in  requirements.txt
lambdas/koodistot_loader/: koodistot_loader.Dockerfile  koodistot_loader.py  requirements.in  requirements.txt
lambdas/mml_loader/: mml_loader.Dockerfile  mml_loader.py  requirements.in  requirements.txt
lambdas/ryhti_client/: lambda_function.py  requirements.in  requirements.txt  ryhti_client.Dockerfile  ryhti_client.py
migrations/: env.py  script.py.mako
migrations/versions/: 2025_03_17_1616-2010b7bcc3b4_remove_old_to_be_exported_field.py  2025_04_04_1307-3ff7fafa3cca_add_document_etag_field.py  2025_06_10_1700-b5e256d780f5_add_regulation_aggregation_functions.py  2025_06_10_1707-59ccf36de6e5_add_regulation_aggregation_views.py  2025_06_12_1247-1a08c5c2ca24_add_instead_of_triggers_for_.py  2025_08_13_0732-a2baec3a78b6_fix_trgfunc_prevent_land_use_area_.py  2025_08_25_1206-ea2990f1379b_remove_trigger_preventing_overlapping_.py  2025_09_08_1443-043da5985f91_remove_regulation_group_short_name_.py  2025_09_09_1716-3dcbee6ccdc2_make_name_mandatory.py  2025_09_11_0825-690c5af83e07_combine_points_into_single_table.py  2025_09_11_0833-5556aef493f0_create_triggers_and_view_table_for_.py  2025_09_23_1535-52ad1cb4c0be_add_plan_matter.py  2025_09_30_1522-8dafeb400d85_refactor_regulation_functions.py  2025_10_02_1328-7831e76a7758_allow_multiple_additional_infos.py  (+7 more)
pg_dumps/: sample_data.dump
test/: conftest.py  test_db.py  test_koodistot_loader.py  test_mml_loader.py  test_models.py  test_ryhti_client.py  test_ryhti_client_plan_map.tif  test_services.py  test_services_mock_xroad.json  test_triggers.py  test_validation.py
(+20 files in other folders)
