[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ryhti_client"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["database", "lambdas/ryhti_client/ryhti_client"]


[tool.pytest.ini_options]
pythonpath = [
  "."
]
env_files = [
    ".env.test",
    ".env"
]

[tool.ruff]
target-version = "py313"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D10", # missing docstring
  "D415", # missing period at end of docstring
  "D205", # Don't require a single line summary
  "FBT001", # boolean
  "FBT002", # boolean
  "FIX002", # allow TODO comments
  "TD002", # TODO author not mandatory
  "RET504", # Allow variable assignment before return
  "ICN001", # Allow imports without alias even when unconventional
  "W191", # Conflicts with formatter.
  "E111", # Conflicts with formatter.
  "E114", # Conflicts with formatter.
  "E117", # Conflicts with formatter.
  "D206", # Conflicts with formatter.
  "D300", # Conflicts with formatter.
  "Q000", # Conflicts with formatter.
  "Q001", # Conflicts with formatter.
  "Q002", # Conflicts with formatter.
  "Q003", # Conflicts with formatter.
  "COM812", # Conflicts with formatter. Let formatting add the trailing comma
  "COM819",
  "ISC002"
  ]
unfixable = [
    "F401", # unused imports
    "F841", # unused variables
    "T201", # print statements
    "EM101", # Strings in Exceptions
    "EM102", # f-strings in Exceptions
    "EM103", # .format in Exceptions
    "PT018"
]

[tool.ruff.lint.isort]
known-first-party = ["database", "ryhti_client"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test/*" = [
  "S101", # allow asserts in tests
  "ARG001", # allow unused arguments(fixtures) in test functions
  ]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
mypy_path = "./,./lambdas/ryhti_client"
explicit_package_bases = true
exclude = [
  "migrations"
]

[[tool.mypy.overrides]]
module = ["pygml.*"]
follow_untyped_imports = true
